<?xml version="1.0"?>
<package>
  <name>zmqros</name>
  <version>0.0.1</version>
  <description>
      A package that allows a ROS master to control another
      ROS master using ZeroMQ
  </description>
  <maintainer email="wallar@mit.edu">Alex Wallar</maintainer>
  <license>Apache</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <export></export>
</package>
